# ttfautohint-mirror

./: .gitignore  COPYING  ChangeLog  FTL.TXT  INSTALL.git  Makefile.am  NEWS  README  THANKS  TODO  bootstrap  bootstrap.conf  configure.ac  no-copyright
aux/: qtlocation-2.patch
doc/: .gitignore  Makefile.am  fontspec-patched.sty  fontspec-xetex-patched.sty  fontspec-xetex.sty  footnote-popup.js  handle-images.hs  local.mk  longtable-patched.sty  make-snapshot.sh  taranges.sed  template.html  template.tex  toc-unfold.js  ttfautohint-1.pandoc  ttfautohint-3.pandoc  ttfautohint-4.pandoc  ttfautohint-css.html  ttfautohint-js.html  ttfautohint.css  ttfautohintGUI.stylesheet  ucharclasses-patched.sty
frontend/: .gitignore  Makefile.am  ddlineedit.cpp  ddlineedit.h  info.cpp  info.h  local.mk  main.cpp  maingui.cpp  maingui.h  static-plugins.cpp.in  ttlineedit.cpp  ttlineedit.h
gnulib/: prefix-gnulib-mk.diff
lib/: .gitignore  Makefile.am  afblue.pl  local.mk  numberset-test.c  numberset.c  numberset.h  sds-wrapper.c  ta.h  tablue.cin  tablue.hin  tabytecode.c  tabytecode.h  tacontrol-flex-wrapper.c  tacontrol.bison  tacontrol.c  tacontrol.flex  tacontrol.h  tacover.h  tacvt.c  tadeltas-flex-wrapper.c  tadeltas.bison  tadeltas.c  tadeltas.flex  tadeltas.h  tadeltas.l  tadeltas.y  tadsig.c  tadummy.c  tadummy.h  tadump.c  taerror.c  tafeature.c  tafile.c  tafont.c  tafpgm.c  tagasp.c  tagloadr.c  tagloadr.h  taglobal.c  (+43 more)
m4/: autotroll.m4
